--- a/index.html
+++ b/index.html
@@ -2,11 +2,85 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>COL Index Project</title>
+    <link rel="stylesheet" href="../css/master.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
   </head>
   <body>
-    <p>
-      Hello World! 
-    </p>
+    <header>
+      <h1>COL_Index Heading Placeholder</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Results</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+    <main>
+      <form action="" id=''>
+        <fieldset class="form">
+          <legend>Cost of Living Index Search</legend>
+          <input type="text" name="city" placeholder="City" id='city'>
+          <select class="" name="state">
+            <option value="al">Alabama</option>
+            <option value="ak">Alaska</option>
+            <option value="az">Arizona</option>
+            <option value="ar">Arkansas</option>
+            <option value="ca">California</option>
+            <option value="co">Colorado</option>
+            <option value="ct">Connecticut</option>
+            <option value="de">Delaware</option>
+            <option value="fl">Florida</option>
+            <option value="ga">Georgia</option>
+            <option value="hi">Hawaii</option>
+            <option value="id">Idaho</option>
+            <option value="il">Illinois</option>
+            <option value="in">Indiana</option>
+            <option value="ia">Iowa</option>
+            <option value="ks">Kansas</option>
+            <option value="ky">Kentucky</option>
+            <option value="la">Louisiana</option>
+            <option value="me">Maine</option>
+            <option value="md">Maryland</option>
+            <option value="ma">Massachusetts</option>
+            <option value="mi">Michigan</option>
+            <option value="mn">Minnesota</option>
+            <option value="ms">Mississippi</option>
+            <option value="mo">Missouri</option>
+            <option value="mt">Montana</option>
+            <option value="ne">Nebraska</option>
+            <option value="nv">Nevada</option>
+            <option value="nh">New Hampshire</option>
+            <option value="nj">New Jersey</option>
+            <option value="nm">New Mexico</option>
+            <option value="ny">New York</option>
+            <option value="nc">North Carolina</option>
+            <option value="nd">North Dakota</option>
+            <option value="oh">Ohio</option>
+            <option value="or">Oregon</option>
+            <option value="pa">Pennsylvania</option>
+            <option value="ri">Rhode Island</option>
+            <option value="sc">South Carolina</option>
+            <option value="sd">South Dakota</option>
+            <option value="tn">Tennessee</option>
+            <option value="tx">Texas</option>
+            <option value="ut">Utah</option>
+            <option value="vt">Vermont</option>
+            <option value="va">Virginia</option>
+            <option value="wa">Washington</option>
+            <option value="wv">West Virginia</option>
+            <option value="wi">Wisconsin</option>
+            <option value="wy">Wyoming</option>
+          </select>
+          <input type="number" name="income" placeholder="Income" id='income'>
+          <input type="submit" name="Submit" value="Submit" id='sub'>
+        </fieldset>
+      </form>
+    </main>
+    <footer>
+      <p>Copyright info</p>
+      <p>Data sources</p>
+    </footer>
+    <script type="text/javascript" src="../js/app.js"></script>
   </body>
 </html>
