--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>COL Index Project</title>
-    <link rel="stylesheet" href="../css/master.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
   </head>
@@ -24,6 +24,6 @@
       <p>Copyright info</p>
       <p>Data sources</p>
     </footer>
-    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
