I updated the locations and removed the city.

--- a/html/results.html
+++ b/html/results.html
@@ -24,7 +24,7 @@
             <legend>Code Fellows Campus Locations:</legend>
             <input type="text" name="city" placeholder="City" id='city' required>
             <select class="" name="state" required>
-              <option value="al">New York City, New York</option>
+              <option value="al">New York, New York</option>
               <option value="ak">Portland, Oregon</option>
               <option value="az">Seattle, Washington</option>
             </select>
