I created the google map api and made it the background.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>COL Index Project</title>
-    <link rel="stylesheet" href="../css/master.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap"
+    async defer></script>
     <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
   </head>
   <body>
-    <header>
-      <h1>COL_Index Heading Placeholder</h1>
+    <header id="menu">
+      <h1>I can haz real job</h1>
       <nav>
         <a href="#">Home</a>
         <a href="#">Index Search</a>
@@ -18,12 +19,13 @@
       </nav>
     </header>
     <main>
-      <div id="googleMapIndex"></div>
+      <div id="googlemapsbackground"></div>
+      <button type="button">Get Started</button>
     </main>
     <footer>
       <p>Copyright info</p>
       <p>Data sources</p>
     </footer>
-    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
