--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
       <p>Copyright info</p>
       <p>Data sources</p>
     </footer>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
