--- a/html/results.html
+++ b/html/results.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/results.css">
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
   </head>
   <body>
     <header>
@@ -22,12 +23,12 @@
         <form action="" id='indexSearch'>
           <fieldset>
             <legend>Code Fellows Campus Locations:</legend>
-            <input type="text" name="city" placeholder="City" id='city' required>
             <select class="" name="state" required>
               <option value="al">New York, New York</option>
               <option value="ak">Portland, Oregon</option>
               <option value="az">Seattle, Washington</option>
             </select>
+            <label for='income'></label>
             <input type="number" name="income" placeholder="Income" id='income' required>
             <input type="submit" name="Submit" value="Submit" id='sub'>
           </fieldset>
@@ -63,6 +64,6 @@
       <p>Copyright info</p>
       <p>Data sources</p>
     </footer>
-    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="../js/results.js"></script>
   </body>
 </html>
