Figured out how to create lat lng array.

--- a/html/results.html
+++ b/html/results.html
@@ -5,12 +5,15 @@
     <title>COL Index Project Results</title>
     <link rel="stylesheet" href="../css/master.css">
     <link rel="stylesheet" href="../css/results.css">
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap"
+    async defer></script>
     <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
   </head>
   <body>
     <header>
-      <h1>COL_Index Heading Placeholder</h1>
+      <h1>I can haz real job</h1>
       <nav>
         <a href="#">Home</a>
         <a href="#">Results</a>
@@ -63,6 +66,6 @@
       <p>Copyright info</p>
       <p>Data sources</p>
     </footer>
-    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="../js/index.js"></script>
   </body>
 </html>
