--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap"
     async defer></script>
     <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </head>
   <body>
     <header id="menu">
@@ -19,6 +20,10 @@
       </nav>
     </header>
     <main>
+      <div id="floating-panel">
+      <p onload= onclick="drop()">
+      <!-- <button id="drop" onclick="drop()">Drop Markers</button> -->
+      </div>
       <div id="googlemapsbackground"></div>
       <button type="button">Get Started</button>
     </main>
