matchInput function_basic functionality

--- a/html/results.html
+++ b/html/results.html
@@ -23,10 +23,10 @@
         <form action="" id='indexSearch'>
           <fieldset>
             <legend>Code Fellows Campus Locations:</legend>
-            <select class="" name="state" required>
-              <option value="al">New York, New York</option>
-              <option value="ak">Portland, Oregon</option>
-              <option value="az">Seattle, Washington</option>
+            <select class="" name="state" id="location" required>
+              <option value="NewYorkManhattanNY">New York, New York</option>
+              <option value="PortlandOR">Portland, Oregon</option>
+              <option value="SeattleWA">Seattle, Washington</option>
             </select>
             <label for='income'></label>
             <input type="number" name="income" placeholder="Income" id='income' required>
