The script tag was wrong.

--- a/html/results.html
+++ b/html/results.html
@@ -66,6 +66,6 @@
       <p>Copyright info</p>
       <p>Data sources</p>
     </footer>
-    <script type="text/javascript" src="../js/index.js"></script>
+    <script type="text/javascript" src="../js/results.js"></script>
   </body>
 </html>
