--- a/html/results.html
+++ b/html/results.html
@@ -10,6 +10,7 @@
     async defer></script>
     <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
   </head>
   <body>
     <header>
