changed pie ids to polar created randomizer and theRemover functions created elCR and elCCR and nameArr and randomArr and rand arrays

--- a/html/results.html
+++ b/html/results.html
@@ -44,21 +44,21 @@
       <section id="barContainer">
         <canvas id="barCanvas"></canvas>
       </section>
-      <section id="pieContainer">
-        <section id="pie1">
-          <canvas id="pie1Canvas"></canvas>
+      <section id="polarContainer">
+        <section id="polar1">
+          <canvas id="polar1Canvas"></canvas>
         </section>
-        <section id="pie2">
-          <canvas id="pie2Canvas"></canvas>
+        <section id="polar2">
+          <canvas id="polar2Canvas"></canvas>
         </section>
-        <section id="pie3">
-          <canvas id="pie3Canvas"></canvas>
+        <section id="polar3">
+          <canvas id="polar3Canvas"></canvas>
         </section>
-        <section id="pie4">
-          <canvas id="pie4Canvas"></canvas>
+        <section id="polar4">
+          <canvas id="polar4Canvas"></canvas>
         </section>
-        <section id="pie5">
-          <canvas id="pie5Canvas"></canvas>
+        <section id="polar5">
+          <canvas id="polar5Canvas"></canvas>
         </section>
       </section>
     </main>
