--- a/html/results.html
+++ b/html/results.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap"
     async defer></script>
-    <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
   </head>
   <body>
