#30 Style Index.html Finished master.css styling Finished style.css Add container to buttone element on index.html

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         <a href="#">Index Search</a>
         <a href="#">Contact</a>
       </nav>
+      <section></section>
     </header>
     <main>
       <div id="googlemapsbackground"></div>
-      <button type="button">Get Started</button>
+      <section>
+        <button type="button">Get Started</button>
+      </section>
     </main>
     <footer>
       <p>Copyright info</p>
