Issue #32 Completd contact.css styling Update master.css styling complete contact.html

--- a/html/contact.html
+++ b/html/contact.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>COL_Index Heading Placeholder</h1>
+      <h1>i can haz real job</h1>
       <nav>
         <a href="#">Home</a>
         <a href="#">Results</a>
@@ -19,12 +19,12 @@
     <main>
       <form action="" id=''>
         <fieldset class="form">
-          <legend>Cost of Living Index Search</legend>
+          <legend>Contact Us</legend>
           <input type="text" name="fName" placeholder="First Name" id='fName'>
           <input type="text" name="lName" placeholder="Last Name" id='lName'>
           <input type="email" name="uEmail" placeholder="e-mail" id='uEmail'>
-          <textarea name="msg" rows="8" cols="40"></textarea>
-          <input type="submit" name="Submit" value="Submit" id='sub'>
+          <textarea name="msg" rows="8" cols="40" placeholder="Please enter your message here"></textarea>
+          <input type="button" name="Submit" value="Submit" id='sub'>
         </fieldset>
       </form>
     </main>
