Issue 37 Added copyright and disclaimer info to all html footers standardized nav links and added sources to links

--- a/html/contact.html
+++ b/html/contact.html
@@ -11,9 +11,9 @@
     <header>
       <h1>i can haz real job</h1>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Results</a>
-        <a href="#">Contact</a>
+        <a href="../index.html">Home</a>
+        <a href="results.html">Index Search</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
     <main>
@@ -29,8 +29,7 @@
       </form>
     </main>
     <footer>
-      <p>Copyright info</p>
-      <p>Data sources</p>
+      <p>&copy; 2016 We Copyright Things Industries</p>
     </footer>
   </body>
 </html>
