--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
   </head>
   <body>
     <header id="menu">
-      <h1>I can haz real job</h1>
+      <h1>i can haz real job</h1>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Index Search</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="html/results.html">Index Search</a>
+        <a href="html/contact.html">Contact</a>
       </nav>
       <section></section>
     </header>
     <main>
       <div id="googlemapsbackground"></div>
       <section>
-        <button type="button">Get Started</button>
+        <a href="html/results.html"><button type="button">Get Started</button></a>
       </section>
     </main>
     <footer>
-      <p>Copyright info</p>
-      <p>Data sources</p>
+      <p>&copy; 2016 We Copyright Things Industries</p>
+      <p><strong><em>Disclaimer:</em> Data sources used in this application should not be considerd authoritative. At best these are strong guesses whose inaccuracy can vary widely from one metropolitan area to the next, and at it's worst reflect reality in no way whatsoever.</strong></p>
     </footer>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
