--- a/html/results.html
+++ b/html/results.html
@@ -46,18 +46,23 @@
       <section id="polarContainer">
         <section id="polar1">
           <canvas id="polar1Canvas"></canvas>
+          <p id="pcn1"></p>
         </section>
         <section id="polar2">
           <canvas id="polar2Canvas"></canvas>
+          <p id="pcn2"></p>
         </section>
         <section id="polar3">
           <canvas id="polar3Canvas"></canvas>
+          <p id="pcn3"></p>
         </section>
         <section id="polar4">
           <canvas id="polar4Canvas"></canvas>
+          <p id="pcn4"></p>
         </section>
         <section id="polar5">
           <canvas id="polar5Canvas"></canvas>
+          <p id="pcn5"></p>
         </section>
       </section>
     </main>
