Working on the results page.

--- a/html/results.html
+++ b/html/results.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/master.css">
     <link rel="stylesheet" href="../css/results.css">
     <link rel="stylesheet" href="../css/style.css">
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap"
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap&libraries=places"
     async defer></script>
     <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
@@ -38,7 +38,7 @@
       </section>
       <section class="container">
         <section id="mapContainer">
-          <div id="googleMapResults"></div>
+          <div id="googlemapsbackground"></div>
         </section>
       </section>
       <section id="barContainer">
