--- a/html/results.html
+++ b/html/results.html
@@ -4,13 +4,8 @@
     <meta charset="utf-8">
     <title>COL Index Project Results</title>
     <link rel="stylesheet" href="../css/master.css">
-    <link rel="stylesheet" href="../css/results.css">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="../css/style.css">
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap&libraries=places"
-=======
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap"
->>>>>>> 0d76ff1604934bd1c5270f4c8892e958c30254ed
+    <!-- <link rel="stylesheet" href="../css/results.css">
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap" -->
     async defer></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
@@ -42,15 +37,9 @@
           </fieldset>
         </form>
       </section>
-<<<<<<< HEAD
       <section class="container">
-        <section id="mapContainer">
-          <div id="googlemapsbackground"></div>
-        </section>
-=======
       <section id="mapContainer">
         <div id="googlemapsbackground"></div>
->>>>>>> 0d76ff1604934bd1c5270f4c8892e958c30254ed
       </section>
       <section id="barContainer">
         <canvas id="barCanvas"></canvas>
