polar chart fixes

--- a/html/results.html
+++ b/html/results.html
@@ -5,8 +5,8 @@
     <title>COL Index Project Results</title>
     <link rel="stylesheet" href="../css/master.css">
     <link rel="stylesheet" href="../css/results.css">
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap"
-    async defer></script>
+    <!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap"
+    async defer></script> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
   </head>
@@ -70,6 +70,6 @@
       <p>&copy; 2016 We Copyright Things Industries</p>
       <p><strong><em>Disclaimer:</em> Data sources used in this application should not be considerd authoritative. At best these are strong guesses whose inaccuracy can vary widely from one metropolitan area to the next, and at it's worst reflect reality in no way whatsoever.</strong></p>
     </footer>
-    <!-- <script type="text/javascript" src="../js/results.js"></script> -->
+    <script type="text/javascript" src="../js/results.js"></script>
   </body>
 </html>
