--- a/html/results.html
+++ b/html/results.html
@@ -5,8 +5,6 @@
     <title>COL Index Project Results</title>
     <link rel="stylesheet" href="../css/master.css">
     <link rel="stylesheet" href="../css/results.css">
-    <!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap"
-    async defer></script> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
   </head>
@@ -20,18 +18,13 @@
       </nav>
     </header>
     <main>
+      <section id="instruction">
+        <p>Please enter your base income level to determine what cities are within your price range. Our logic will search through our database of cities to display results within +/- $1,000 when possible. When it is not possible to proveide a close match, the range will be expanded up to +/- $25,000 of the base income level.</p>
+      </section>
       <section id="searchContainer">
         <form action="" id='indexSearch'>
           <fieldset>
-            <legend>Code Fellows Campus Locations:</legend>
-            <section id="dropdown">
-              <select class="" name="state" id="location" required>
-                <option value="NewYorkManhattanNY">New York, New York</option>
-                <option value="PortlandOR">Portland, Oregon</option>
-                <option value="SeattleWA">Seattle, Washington</option>
-              </select>
-            </section>
-            <label for='income'></label>
+            <legend>Cost of Living Index Search</legend>
             <input type="number" name="income" placeholder="Income" id='income' required>
             <input type="submit" name="Submit" value="Submit" id='sub'>
           </fieldset>
@@ -71,5 +64,6 @@
       <p><strong><em>Disclaimer:</em> Data sources used in this application should not be considerd authoritative. At best these are strong guesses whose inaccuracy can vary widely from one metropolitan area to the next, and at it's worst reflect reality in no way whatsoever.</strong></p>
     </footer>
     <script type="text/javascript" src="../js/results.js"></script>
+    <!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap" async defer></script> -->
   </body>
 </html>
