--- a/html/results.html
+++ b/html/results.html
@@ -64,6 +64,6 @@
       <p><strong><em>Disclaimer:</em> Data sources used in this application should not be considerd authoritative. At best these are strong guesses whose inaccuracy can vary widely from one metropolitan area to the next, and at it's worst reflect reality in no way whatsoever.</strong></p>
     </footer>
     <script type="text/javascript" src="../js/results.js"></script>
-    <!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap" async defer></script> -->
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBJuPhU4z3lu9ZZnxgY88K-A_tAKx8Exkg&callback=initMap" async defer></script>
   </body>
 </html>
