added functionality to chide charts until submit was clicked

--- a/html/results.html
+++ b/html/results.html
@@ -33,29 +33,31 @@
       <section id="mapContainer">
         <div id="googlemapsbackground"></div>
       </section>
-      <section id="barContainer">
-        <canvas id="barCanvas"></canvas>
-      </section>
-      <section id="polarContainer">
-        <section id="polar1">
-          <canvas id="polar1Canvas"></canvas>
-          <p id="pcn1"></p>
+      <section id='chart' hidden>
+        <section id="barContainer">
+          <canvas id="barCanvas"></canvas>
         </section>
-        <section id="polar2">
-          <canvas id="polar2Canvas"></canvas>
-          <p id="pcn2"></p>
-        </section>
-        <section id="polar3">
-          <canvas id="polar3Canvas"></canvas>
-          <p id="pcn3"></p>
-        </section>
-        <section id="polar4">
-          <canvas id="polar4Canvas"></canvas>
-          <p id="pcn4"></p>
-        </section>
-        <section id="polar5">
-          <canvas id="polar5Canvas"></canvas>
-          <p id="pcn5"></p>
+        <section id="polarContainer">
+          <section id="polar1">
+            <canvas id="polar1Canvas"></canvas>
+            <p id="pcn1"></p>
+          </section>
+          <section id="polar2">
+            <canvas id="polar2Canvas"></canvas>
+            <p id="pcn2"></p>
+          </section>
+          <section id="polar3">
+            <canvas id="polar3Canvas"></canvas>
+            <p id="pcn3"></p>
+          </section>
+          <section id="polar4">
+            <canvas id="polar4Canvas"></canvas>
+            <p id="pcn4"></p>
+          </section>
+          <section id="polar5">
+            <canvas id="polar5Canvas"></canvas>
+            <p id="pcn5"></p>
+          </section>
         </section>
       </section>
     </main>
