fixed email link corrected spelling errors on results.html

--- a/html/contact.html
+++ b/html/contact.html
@@ -20,11 +20,7 @@
       <form action="" id=''>
         <fieldset class="form">
           <legend>Contact Us</legend>
-          <input type="text" name="fName" placeholder="First Name" id='fName'>
-          <input type="text" name="lName" placeholder="Last Name" id='lName'>
-          <input type="email" name="uEmail" placeholder="e-mail" id='uEmail'>
-          <textarea name="msg" rows="8" cols="40" placeholder="Please enter your message here"></textarea>
-          <input type="button" name="Submit" value="Submit" id='sub'>
+          <a href="mailto:junk_mail@wecopyrightthings.org?subject=Newsletter%20subscription%20request&body=Please%20subscribe%20me%20to%20your%20newsletter!%0A%0AFull%20name%3A%0A%0AWhere%20did%20you%20hear%20about%20us%3F">Click here to email us! We care about your problems. Also, sign up for our newsletter!</a>
         </fieldset>
       </form>
     </main>
