--- a/html/results.html
+++ b/html/results.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <section id="instruction">
-        <p>Please enter your base income level to determine what cities are within your price range. Our logic will search through our database of cities to display results within +/- $1,000 when possible. When it is not possible to proveide a close match, the range will be expanded up to +/- $25,000 of the base income level.</p>
+        <p>Please enter your base income level to determine what cities are within your price range. Our logic will search through our database of cities to display results within +/- $1,000 when possible. When it is not possible to provide a close match, the range will be expanded by up to +/- $25,000 of the base income level until a minimum of 4 possible matches are returned.</p>
       </section>
       <section id="searchContainer">
         <form action="" id='indexSearch'>
